--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,57 @@
 body {
-  background: red;
+  background: lightcyan;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-body p {
-  color: yellow;
+
+.container {
+  background-image: url("/src/girl.jpg");
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 50%;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
-body font {
-  size: 2em;
-  weight: bold;
+.container .text {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-start;
+  padding: 5%;
+  background-color: white;
+  background-position: bottom;
+}
+.container .text .hiddentext {
+  display: none;
+}
+.container .bottom {
+  display: flex;
+  justify-content: space-between;
+  color: blue;
+}
+.container .date {
+  background-color: orangered;
+  border-radius: 100%;
+  align-self: flex-end;
+  padding: 0px;
+  color: white;
+  position: relative;
+  top: 0px;
+  right: 0px;
+}
+.container .photo {
+  background-color: orangered;
+  align-self: flex-start;
+  padding: 2px;
+  width: 25%;
+  color: white;
+  text-align: center;
+}
+
+:hover.container .hiddentext {
+  display: contents;
 }/*# sourceMappingURL=style.css.map */
