--- a/assets/style.css
+++ b/assets/style.css
@@ -1,25 +1,34 @@
 body {
   background: lightcyan;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
 .container {
-  background-image: url("/src/girl.jpg");
-  background-position: top;
-  background-repeat: no-repeat;
-  background-size: cover;
   width: 400px;
   height: 500px;
+  overflow: hidden;
+}
+.container .card {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   margin-top: 5%;
+  background-image: url("/src/girl.jpg");
+  background-position: top;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+  transition: 0.7s;
 }
 .container .title {
   font-size: 22px;
   color: orangered;
+  margin: 0px;
 }
 .container .text {
   display: flex;
@@ -41,17 +50,6 @@ body {
   justify-content: space-around;
   align-items: center;
   color: blue;
-}
-.container .date {
-  background-color: orangered;
-  border-radius: 100%;
-  align-self: flex-end;
-  justify-content: flex-start;
-  margin-bottom: 250px;
-  color: white;
-  position: relative;
-  top: 5px;
-  right: 5px;
 }
 .container .photo {
   background-color: orangered;
