--- a/assets/style.css
+++ b/assets/style.css
@@ -14,21 +14,19 @@ body {
   width: 500px;
   height: 600px;
   margin-top: 10%;
+  overflow: hidden;
 }
 .container .fond {
   background-image: url("/src/girl.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  width: 500px;
-  height: 400px;
-}
-.container .fond .fond:first-child {
-  overflow: hidden;
+  width: 100%;
+  height: 100%;
   z-index: -1;
-  transition: all 10s;
+  transition: all 1s;
 }
-.container .fond .date {
+.container .date {
   background-color: orangered;
   color: white;
   padding: 5px;
@@ -40,6 +38,7 @@ body {
   margin-left: 430px;
   margin-top: 10px;
   margin-right: 5px;
+  z-index: 1;
 }
 .container .article {
   background-color: beige;
@@ -48,14 +47,14 @@ body {
   justify-content: center;
   align-items: flex-start;
   width: 500px;
-  height: 200px;
-  overflow: hidden;
+  max-height: 200px;
+  transition: max-height 1s;
 }
 .container .article .hidden {
   margin-left: 10px;
   opacity: 0%;
   overflow: hidden;
-  transition: opacity 1s;
+  transition: all 1s;
 }
 .container .article .titre {
   font-size: 30px;
@@ -87,11 +86,16 @@ body {
 .container:hover .hidden {
   opacity: 100%;
   overflow: visible;
+  padding: 5px;
 }
 
-.container:hover .fond:first-child {
-  transform: scale(1.2);
+.container:hover .fond {
   -webkit-backdrop-filter: blur(10px);
           backdrop-filter: blur(10px);
-  overflow: visible;
+  transform: scale(1.2);
+}
+
+.container:hover .article {
+  max-height: 600px;
+  padding: 5px;
 }/*# sourceMappingURL=style.css.map */
